--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "color": "^2.0.0",
     "express": "^4.15.4",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "promise-polyfill": "^6.0.2",
     "radium": "^0.19.4",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-transition-group": "^15.6.0",
     "react-addons-update": "^15.6.0",
+    "react-body-backgroundcolor": "^1.0.1",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
+    "react-flipcard": "^0.2.1",
     "react-icons": "^2.2.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "^1.0.13",
+    "react-swipeable-views": "^0.12.8",
+    "react-swipeable-views-utils": "^0.12.8",
     "react-toastify": "^2.0.0-rc.3",
     "react-transition-group": "^2.2.0",
+    "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
