--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-addons-update": "^15.6.0",
     "react-body-backgroundcolor": "^1.0.1",
     "react-bootstrap": "^0.31.3",
+    "react-bootstrap-autosuggest": "^0.5.0",
+    "react-bootstrap-typeahead": "1.4.2",
     "react-dom": "^15.6.1",
+    "react-file-download": "^0.3.5",
     "react-flipcard": "^0.2.1",
     "react-icons": "^2.2.5",
     "react-redux": "^5.0.6",
@@ -24,6 +27,7 @@
     "react-scripts": "^1.0.13",
     "react-swipeable-views": "^0.12.8",
     "react-swipeable-views-utils": "^0.12.8",
+    "react-text-truncate": "^0.11.2",
     "react-toastify": "^2.0.0-rc.3",
     "react-transition-group": "^2.2.0",
     "reactstrap": "^4.8.0",
