--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "async": "^2.5.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.15.4",
     "history": "^4.7.2",
-    "lodash": "^4.17.4",
     "promise-polyfill": "^6.0.2",
     "radium": "^0.19.4",
     "react": "^15.6.1",
