--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wine_static",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "async": "^2.5.0",
     "babel-polyfill": "^6.26.0",
